Fix text alignment of `.nav-toggler-icon` in IE

--- a/assets/scss/material/_toolbar.scss
+++ b/assets/scss/material/_toolbar.scss
@@ -389,7 +389,6 @@
   @include set-material-icons;
 
   display: block;
-  margin: auto;
 
   &::before {
     content: $toolbar-toggler-icon;
